--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "desafio-backend-modulo-05-sistema-pdv-b2b-ifood-t11",
+  "name": "Desafio-CubosAcademy",
   "version": "1.0.0",
   "description": "![](https://i.imgur.com/xG74tOh.png)",
   "main": "index.js",
